fix link viewport jumping bug

--- a/src/scss/partials/_sketches.scss
+++ b/src/scss/partials/_sketches.scss
@@ -45,35 +45,54 @@ P5-DOM SKETCHES CSS STYLING
 
 // Styling for the links that slide in 
 
+.sketch-link-animation{
+  animation-name: slide-in;
+  animation-duration: .3s; 
+  animation-timing-function: ease-out; 
+  animation-iteration-count: 1;
+}
 
+.sketch-link-container{
+  position: absolute;
+  top:0;
+  width:100%;
+  height:0;
+}
 
 .sketch-link{
   text-align:center;
- 
-  // right:-10%;
-//  left:100%;
-right:0;
+  text-decoration:none;
+  float:right;
   font-size: 3.2vw;
   top:2vw;
   padding:5vw .8vw;
-  // transition: all .5s ease;
+  transition: all .5s ease;
   width: 30%;
   color:white;
   border-radius:3px;
-  position: absolute;
+  position: relative;
   background-color: rgba(237,34,93,.95);
   border:2px solid $background-color-main;
   z-index: 3000000;
-  transition:all 2s ease;
-  // transform: translate(-100%, 0)
-  // line-height:3.3vw;
+  line-height:3.3vw;
 }
+
+
+.sketch-link-upper{
+  top: 1vw;
+}
+
+.sketch-link-lower{
+  top: 20vw;
+}
+
 .sketch-link span{
   text-decoration:underline;
 }
 
 .sketch-link a{
   color: $background-color-main;
+  
 }
 
 .sketch-link:hover{
@@ -81,14 +100,7 @@ right:0;
   font-size: 3.3vw;
 }  
 
-.sketch-link-upper{
-  top: 10vw;
-  // top:0;
-}
 
-.sketch-link-lower{
-  top: 20vw;
-}
 
 @include breakpoint(md) {
   .sketch-link{
@@ -96,12 +108,9 @@ right:0;
     font-size:1.8vw;
     top:3vw;
     padding:2vw 1vw;
-    height: 380px;
     border:4px solid $background-color-main;
-    // left:0;
+    right:0;
     line-height:2vw;
-   
-    // transform: translate(100%, 0)
   }
   
   .sketch-link:hover{
@@ -117,34 +126,16 @@ right:0;
   }
 }
 
-.sketch-link-animation{
-  animation-name: slide-in;
-  animation-duration: .3s; 
-  animation-timing-function: ease-out; 
-  animation-iteration-count: 1;
-}
-
-
 @keyframes slide-in {
   0% {
     transform: translate(100%, 0);
- 
   }
   100% {
     transform: translate(0%, 0)
-    
-
   }
 }
 
-.test2{
-  width:100%;
-  // height: 380px;
-}
 
-.container{
-  overflow:hidden;
-}
 /********************* Circle Explosion*********************/
 
 // Layout for logo in circle-explosion sketch
